--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,10 @@ Django==5.2.8
 djangorestframework==3.16.1
 kombu==5.6.2
 packaging==25.0
+pillow==12.1.0
 prompt_toolkit==3.0.52
 psycopg2-binary==2.9.11
+pymediainfo==7.0.1
 python-dateutil==2.9.0.post0
 redis==7.1.0
 six==1.17.0
